@@ -1,3 +1,5 @@
+2006/6/15 -- released version 20060615_trunk
+
 2006/6/14 -- released version 20060614_trunk
 
 2006/6/13 -- released version 20060613_trunk
